Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1></h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus atque sit sequi itaque ducimus quo, sed corrupti fugiat, praesentium alias a autem placeat. Quas consequuntur suscipit labore minima fugiat? Id?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam culpa at, voluptas minus ipsa quia. Modi similique aliquid veritatis at quis? Consequatur fugiat blanditiis in id, facere mollitia aut molestiae?</p>
 </body>
 </html>
